Update README.md
adding command to run SoCo's prototype.